# ai-law-firm-dubai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  GETTING_STARTED.md  GETTING_STARTED_ARABIC.md  GETTING_STARTED_HINDI.md  GETTING_STARTED_TAGALOG.md  GETTING_STARTED_URDU.md  KNOWLEDGE_PROVENANCE.md  MODEL_SETUP.md  NO_PII_NO_DATA.md  README.md  SCOPE.md  SECURITY.md  STATUS.md  TRANSLATION_HELP_WANTED.md  config.toml.template  pyproject.toml  setup.sh
_drafting_data/: 00_DRAFTING_INDEX.md  10-contract-sale-of-goods-DIFC.md  100-adr-mediation-position-statement-SHARED.md  101-adr-mediation-agreement-SHARED.md  102-adr-settlement-agreement-singapore-convention-SHARED.md  103-adr-without-prejudice-protocols-DIFC.md  11-contract-sale-of-goods-Mainland.md  110-insolvency-difc-law-2019.md  111-insolvency-Mainland-bankruptcy-law.md  12-contract-employment-DIFC.md  120-tribunal-DIFC-small-claims.md  121-tribunal-Mainland-labour-court.md  122-tribunal-Mainland-real-estate-RDS.md  13-contract-employment-Mainland.md  130-arbitration-DIAC-and-DIFC-LCIA.md  131-arbitration-set-aside-and-recognition.md  14-contract-shareholders-DIFC.md  15-contract-shareholders-Mainland.md  20-pleading-statement-of-claim-DIFC.md  21-pleading-statement-of-claim-Mainland.md  22-pleading-defence-DIFC.md  23-pleading-defence-Mainland.md  24-application-summary-judgment-DIFC.md  25-application-injunction-DIFC.md  26-application-precautionary-attachment-Mainland.md  30-evidence-witness-statement-DIFC.md  31-evidence-sworn-statement-Mainland.md  32-court-forms-DIFC.md  33-court-forms-Mainland.md  34-correspondence-letter-before-action-SHARED.md  35-contract-arbitration-clause-SHARED.md  36-style-guide-DIFC.md  37-style-guide-Mainland.md  40-pleading-counterclaim-DIFC.md  41-pleading-counterclaim-Mainland.md  42-application-strike-out-DIFC.md  43-contract-nda-DIFC.md  44-contract-nda-Mainland.md  45-contract-lease-DIFC.md  46-contract-lease-Mainland.md  (+42 more)
_statute_corpus/: INDEX.md  _STATUTE_CORPUS_SUMMARY.md  arbitration_law_2008.md  companies_law_2018.md  conflicts_decree_19_29.md  (+21 more)
(+78 files in other folders)
