[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ailawfirm_dubai"
version = "0.1.0"
description = "AI Law Firm — Dubai-DIFC Solo edition. Dual-system practice OS (DIFC common-law + Mainland civil-law) with 5-language Gulf support. Built on MemPalace memory architecture."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Rushikesh Mahajan", email = "advrushikeshravindramahajan@gmail.com" },
]
keywords = [
    "ai", "memory", "llm", "rag", "chromadb", "mcp",
    "vector-database", "claude", "chatgpt", "embeddings",
    "legal-tech", "law-firm", "dubai", "difc", "uae",
    "solo-advocate", "common-law", "civil-law",
    "arabic", "urdu", "hindi", "tagalog",
    "wolfgang-rush",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "chromadb>=0.4.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Wolfgangrush/ai-law-firm-dubai"
Repository = "https://github.com/Wolfgangrush/ai-law-firm-dubai"
"Bug Tracker" = "https://github.com/Wolfgangrush/ai-law-firm-dubai/issues"
"Upstream Engine" = "https://github.com/mempalace/mempalace"

[tool.setuptools.packages.find]
include = ["ailawfirm_dubai*"]

[project.scripts]
ailawfirm-dubai = "ailawfirm_dubai:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0", "twine>=4.0"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
